# projetoHaskell-TaskFit

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  migration.sql  projetoHello.cabal
app/: Main.hs
app/Api/: Model.hs
app/Server/: Routes.hs
frontend/: aluno.html  aluno.js  style.css
