cabal-version:      3.0
name:               projetoHello
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             romefeller
maintainer:         alexgrcol@hotmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable projetoHello
    import:           warnings
    main-is:          Main.hs
    other-modules:    Server.Routes
                      Api.Model
    -- other-extensions:
    build-depends:    base,
                      servant,
                      aeson,
                      warp,
                      servant-server,
                      wai-cors,
                      wai,
                      postgresql-simple,
                      bytestring,
                      mtl
    hs-source-dirs:   app
    default-language: Haskell2010
